# notation-flashcards

./: .gitignore  README.md  pyproject.toml
notation_flashcards/: __main__.py  render.py  theory.py
tests/: test_theory.py
